--- a/package.json
+++ b/package.json
@@ -11,31 +11,40 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-firebase/app": "^21.7.2",
-    "@react-native-firebase/auth": "^21.7.2",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/stack": "^7.1.1",
-    "axios": "^1.7.9",
+    "@react-navigation/material-top-tabs": "^7.2.3",
+    "@react-navigation/native": "^7.0.19",
+    "@react-navigation/stack": "^7.2.3",
+    "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "expo": "~52.0.38",
     "expo-build-properties": "~0.13.2",
+    "expo-checkbox": "~4.0.1",
+    "expo-document-picker": "~13.0.3",
     "expo-image-manipulator": "^13.0.6",
     "expo-image-picker": "^16.0.5",
     "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.27.4",
+    "html-parse-stringify": "^3.0.1",
     "libphonenumber-js": "^1.11.19",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-country-picker-modal": "^2.0.0",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-pager-view": "^6.7.0",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-reanimated": "^3.17.1",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.10.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-tab-view": "^4.0.6",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.13.5",
     "twilio": "^5.4.3"
   },
   "devDependencies": {
